--- a/2022/Dockerfile
+++ b/2022/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /aoc
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
+ENV PYTHONPATH=/aoc
+
 COPY . .
 
 CMD ["python", "main.py"]
